--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     /* Side search bar container */
     .side-search {
-      position: fixed;
+      position:fixed;
       top: 0;
       left: 0;
       width: 250px;
@@ -242,6 +242,7 @@
   <header>
     <h1>🔧 LifeFix Hub</h1>
     <p class="tagline">50+ Daily Problems & Solutions 💡</p>
+    <p>if you don't see search bar.please open destop mod </p>
   </header>
 
   <div class="container">
