--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="monetag" content="7d8e099586e201d67e448acafdcbc648">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>LifeFix Hub – Fun Solutions for Daily Problems! 🌟</title>
